--- a/.github/workflows/Release-Windows.yml
+++ b/.github/workflows/Release-Windows.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up environment
       run: |
@@ -20,27 +20,33 @@ jobs:
     - name: Install dependencies
       run: |
         # 安装项目所需的依赖项
-        # 这里假设没有额外的依赖项，如果有，请添加相应的安装命令
+        # 如果有其他依赖项，请在此处添加安装命令
+        choco install <dependency-name> --yes
 
     - name: Configure CMake
       run: |
-        cmake -B build -S .
+        cmake -B build -S . -DCMAKE_BUILD_TYPE=Release
 
     - name: Build project
       run: |
-        cmake --build build --config Release
+        cmake --build build --config Release || exit 1
 
     - name: Archive artifacts
       uses: actions/upload-artifact@v3
       with:
         name: release-artifact-windows
-        path: build/Release/TranslucentSM.exe
+        path: ${{ github.workspace }}/build/Release/TranslucentSM.exe
 
     - name: Upload to release
       id: upload-release
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v1.10.0
       with:
-        files: build/Release/TranslucentSM.exe
+        files: ${{ github.workspace }}/build/Release/TranslucentSM.exe
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag: ${{ github.ref }}
+        tag: ${{ github.ref_name }}
         overwrite: true
+
+    - name: Cleanup
+      if: always()
+      run: |
+        rm -rf build
