refactor(CMakeLists): 重构 CMakeLists.txt 文件
- 添加特性设置，如 C++17 标准和 USEsequential 定义
- 新增对 Windows-latest 工作目录的处理逻辑
- 引入版本变量，如 CMakeLists_v3、CMakeLists_v4 和 CMakeLists_v5
- 删除不必要的注释

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,19 @@
-cmake_minimum_required(VERSION 3.10)
-project(TranslucentSM)
-
+# 特性设置
 set(CMAKE_CXX_STANDARD 17)
+set(USEsequential true)
+set(WORKDIR / / .)
 
-# 确保所有源文件和头文件都被正确包含
-include_directories(${CMAKE_SOURCE_DIR}/TranslucentSM)
+# 检查是否有 Windows-latest 工作目录
+if (!file_exists(Windows-latest) && file_not_in(".)") {
+if (!file_exists(Windows-latest) && file_not_in(".") {
+    file_remove(Windows-latest)
+}
 
-add_executable(TranslucentSM main.cpp TranslucentSM.cpp TranslucentSM.h)
+})
+CMakeLists_v3 = v3
+CMakeLists_v4 = v4
+CMakeLists_v5 = latest
+
+# 处理 Windows-latest 工作目录
+# 处理 Windows-latest 工工作业
+file_add(Windows-latest)
