--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -29,3 +29,28 @@ jobs:
         name: TranslucentSM-Nightly
         path: build/Release/*.exe
         retention-days: 1
+        
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: nightly-${{ steps.date.outputs.date }}
+        release_name: Nightly ${{ steps.date.outputs.date }}
+        draft: false
+        prerelease: true
+        
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/Release/*.exe
+        asset_name: TranslucentSM-Nightly.exe
+        asset_content_type: application/octet-stream
+        
+    - name: Get current date
+      id: date
+      run: echo "date=$(date +'%Y-%m-%d %H:%M')" >> $GITHUB_OUTPUT
