--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -8,13 +8,18 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1
 
       - name: Build Solution
         run: msbuild start.sln /p:Configuration=Release /p:Platform=x64
+
+      - name: Get Current Date
+        id: date
+        run: |
+          echo "formattedDate=$(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT
 
       - name: Create Release
         id: create_release
