--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -18,20 +18,45 @@ jobs:
       uses: actions/setup-cmake@v3
       
     - name: Configure CMake
-      run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
+      run: |
+        cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
+        if (-not $?) {
+          Write-Error "CMake configuration failed"
+          exit 1
+        }
+      shell: pwsh
       
     - name: Build
-      run: cmake --build build --config Release
+      run: |
+        cmake --build build --config Release
+        if (-not $?) {
+          Write-Error "Build failed"
+          exit 1
+        }
+      shell: pwsh
       
     - name: Get current date
       id: date
-      run: echo "date=$(date +'%Y-%m-%d %H:%M')" >> $GITHUB_OUTPUT
+      shell: pwsh
+      run: |
+        $date = Get-Date -Format "yyyy-MM-dd HH:mm"
+        echo "date=$date" >> $env:GITHUB_OUTPUT
       
+    - name: Check Build Output
+      shell: pwsh
+      run: |
+        $exePath = Get-ChildItem "build/Release/*.exe" | Select-Object -First 1
+        if (-not $exePath) {
+          Write-Error "No .exe file found in build/Release/"
+          exit 1
+        }
+        echo "EXE_PATH=$($exePath.FullName)" >> $env:GITHUB_ENV
+        
     - name: Create Artifact
       uses: actions/upload-artifact@v4
       with:
         name: TranslucentSM-Nightly
-        path: build/Release/*.exe
+        path: ${{ env.EXE_PATH }}
         retention-days: 1
         
     - name: Create Release
@@ -51,6 +76,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: build/Release/*.exe
+        asset_path: ${{ env.EXE_PATH }}
         asset_name: TranslucentSM-Nightly.exe
         asset_content_type: application/octet-stream
