ci: 更新Qt安装配置并添加忽略文件
将Qt安装配置从qt-version改为version以匹配最新action语法
添加.github/workflow.error到.gitignore

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Qt
       uses: jurplel/install-qt-action@v3
       with:
-        qt-version: '5.15.2'
+        version: '5.15.2'
         arch: 'win64_msvc2019_64'
 
     - name: Configure CMake
