fix(TranslucentSM): 修复std::min和std::max的使用问题
refactor(TranslucentSMDLL): 优化DLL入口点代码结构
style(TranslucentSMDLL): 添加DWMWA_MICA_EFFECT宏定义

build(CMakeLists): 仅MSVC环境下安装PDB文件

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -75,9 +75,7 @@ install(TARGETS TranslucentSM TranslucentSMApp
     RUNTIME DESTINATION bin
     LIBRARY DESTINATION bin
 )
-install(FILES $<TARGET_PDB_FILE:TranslucentSM> DESTINATION bin OPTIONAL)
-install(FILES $<TARGET_PDB_FILE:TranslucentSMApp> DESTINATION bin OPTIONAL)
-
-# 安装规则
-
-install(FILES $<TARGET_PDB_FILE:TranslucentSM> DESTINATION bin OPTIONAL)
+if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    install(FILES $<TARGET_PDB_FILE:TranslucentSM> DESTINATION bin OPTIONAL)
+    install(FILES $<TARGET_PDB_FILE:TranslucentSMApp> DESTINATION bin OPTIONAL)
+endif()
