feat(网络): 添加Qt网络模块支持并实现下载功能
- 在CMakeLists.txt中添加Qt6 Network模块依赖
- 修改MainWindow.h添加下载完成槽函数和版本比较方法
- 更新构建配置以包含网络模块
- 清理main.cpp中未使用的安装路径检查代码
- 在TranslucentSM.h中添加Windows.h头文件包含
- 修改TranslucentSM.cpp改进版本检测逻辑和类型转换

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,13 +4,13 @@ project(TranslucentSM)
 set(CMAKE_DISABLE_FIND_PACKAGE_Vulkan ON)
 
 # 添加Qt5依赖
-find_package(Qt6 COMPONENTS Widgets Core Gui REQUIRED)
+find_package(Qt6 COMPONENTS Widgets Core Gui Network REQUIRED)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
 
 # 设置Qt5模块
-set(QT_MODULES Qt6::Widgets Qt6::Core Qt6::Gui)
+set(QT_MODULES Qt6::Widgets Qt6::Core Qt6::Gui Qt6::Network)
 
 # 设置C++标准
 set(CMAKE_CXX_STANDARD 17)
@@ -55,7 +55,7 @@ set_target_properties(TranslucentSM PROPERTIES
     PREFIX ""
 )
 
-target_link_libraries(TranslucentSM PRIVATE dwmapi user32 gdi32 shell32)
+target_link_libraries(TranslucentSM PRIVATE dwmapi user32 gdi32 shell32 shlwapi)
 
 # 创建可执行文件
 add_executable(TranslucentSMApp ${SOURCES} ${HEADERS})
