feat: 添加QString支持并优化错误处理
refactor: 重构TranslucentSM.cpp使用QString输出错误信息
build: 添加shlwapi库链接以支持路径操作
style: 清理构建过程中的临时文件

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -77,7 +77,7 @@ set_target_properties(TranslucentSMApp PROPERTIES
 # 链接库
 if(WIN32)
     # 链接Qt5库和其他必要库
-    target_link_libraries(TranslucentSMApp PRIVATE ${QT_MODULES} ${EXTRA_LIBS})
+    target_link_libraries(TranslucentSMApp PRIVATE ${QT_MODULES} ${EXTRA_LIBS} shlwapi)
     if(MINGW)
         target_link_libraries(TranslucentSMApp PRIVATE -static-libgcc -static-libstdc++ -Wl,--subsystem,windows)
     endif()
