fix(MainWindow): 修复标题栏样式设置错误
style: 移除多余的右大括号并保持样式设置
chore: 更新.gitignore忽略构建生成文件

--- a/.gitignore
+++ b/.gitignore
@@ -399,3 +399,10 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 .github/workflow.error
+build/CMakeFiles/CMakeConfigureLog.yaml
+build/CMakeFiles/4.1.0-rc3/CMakeDetermineCompilerABI_C.bin
+build/CMakeFiles/4.1.0-rc3/CMakeDetermineCompilerABI_CXX.bin
+build/CMakeFiles/4.1.0-rc3/CompilerIdC/a.exe
+build/CMakeFiles/4.1.0-rc3/CompilerIdCXX/a.exe
+build/CMakeFiles/TranslucentSM.dir/objects.a
+build/lib/libTranslucentSM.dll.a
